<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:textAlignment="center"
    android:background="@color/signupdark"
    android:textDirection="rtl">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="50dp"
    android:gravity="center_vertical"
    android:background="@drawable/uploadpic2"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/uploadphoto"
        android:layout_width="wrap_content"
        android:text="@string/uploadphoto1"
        android:textSize="20sp"
        android:textColor="@color/whitgray"
        android:layout_height="wrap_content">
    </TextView>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="200dp"
        android:layout_weight="1"

        android:src="@drawable/upload_pink">

    </ImageView>

</LinearLayout>




    <EditText
        android:id="@+id/mEIdentityNumber"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:inputType="number"
        android:hint="@string/identinitynumber"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textColorHint="@color/whitgray"
        android:textColor="@color/whitgray"
        android:background="@drawable/dark_withpadding"
        android:layout_height="wrap_content">
    </EditText>
    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:inputType="number"
        android:hint="@string/phone"
        android:textColor="@color/whitgray"
        android:background="@drawable/dark_withpadding"
        android:textColorHint="@color/whitgray"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_height="wrap_content">
    </EditText>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="32dp"
        android:layout_gravity="center"
        android:src="@drawable/profile"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"/>
    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_marginTop="32dp"
        android:text="@string/register"
        android:background="@drawable/purblebutton"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_height="wrap_content">
    </Button>


</LinearLayout>