<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:textAlignment="center"
    android:background="@drawable/signuplight"
    android:textDirection="rtl"
    tools:context=".Activity.ChallengedIlliteracy">
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        android:background="#F4F4F6" />
<EditText
    android:id="@+id/EditEmail"
    android:layout_width="match_parent"
    android:layout_marginTop="150dp"
    android:inputType="textEmailAddress"
    android:hint="@string/email"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:background="@drawable/vlounterr_edi_text_black"
    android:layout_height="wrap_content">
</EditText>
    <EditText
        android:id="@+id/EditPassword"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:textAlignment="textEnd"
        android:hint="@string/password"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/vlounterr_edi_text_black"
        android:layout_height="wrap_content"
        android:gravity="end">
    </EditText>

    <Button
        android:id="@+id/Signin"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:text="@string/signin"
        android:background="@drawable/buttonborder"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_height="wrap_content">
    </Button>


    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/createnewaccount"
            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/createnewaccount"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="#2A2E43"
            android:layout_height="wrap_content">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@android:color/black" />
    </LinearLayout>
</LinearLayout>