<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <fragment
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:background="@drawable/dark_gray"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchConrainer"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:background="@drawable/dark_gray">

        <TextView
            android:id="@+id/searchtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/serachtext"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:drawableLeft="@drawable/iconarrow">

        </TextView>

        <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
            android:id="@+id/progress_horizontal"
            style="@style/PocketProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/searchtext"
            android:indeterminate="true"
            app:spb_progressiveStart_speed="1.5"
            app:spb_progressiveStop_speed="3.4"
            android:layout_marginBottom="16dp"
            app:spb_stroke_width="10dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:src="@drawable/indicator">

        </ImageView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:visibility="gone"
        android:id="@+id/searchConrainer1">

        <ImageView
            android:layout_width="match_parent"
            android:id="@id/progress_horizontal"
            android:background="@drawable/gradient"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            >

        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/distance"
            android:text="@string/distance"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/black"
            android:layout_marginLeft="16dp">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/personname"
            android:text="ادهم المصري"
            android:drawableLeft="@drawable/call"
            android:drawablePadding="16dp"
            android:drawableRight="@drawable/path"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_height="wrap_content">

        </TextView>
        <Button
            android:layout_width="match_parent"
            android:id="@+id/person_name"
            android:text="قابلت احمد"
            android:textColor="@color/white"
            android:background="@drawable/purblebutton"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            android:layout_height="wrap_content">

        </Button>

        <Button
            android:layout_width="match_parent"
            android:text="@string/cancle"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:id="@+id/cancle"
            android:layout_marginEnd="16dp"
            android:background="@drawable/purblebutton"
            android:layout_height="wrap_content">

        </Button>
    </LinearLayout>

</FrameLayout>

