<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity.SplashActivity"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    android:background="@drawable/splash"
    android:theme="@android:style/Theme.NoTitleBar.Fullscreen">

    <FrameLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textDirection="rtl"
        android:layoutDirection="rtl">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MapsActivity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkgray"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:id="@+id/searchConrainer">
            <ImageView
                android:layout_width="match_parent"
                android:id="@id/progress_horizontal"
                android:background="@drawable/gradient"
                android:layout_marginBottom="16dp"
                android:layout_height="wrap_content">

            </ImageView>


            <Button
                android:id="@+id/searchtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/greenwithwhite"
                android:gravity="center"
                android:paddingStart="50dp"
                android:textSize="20sp"
                android:padding="16dp"
                android:paddingEnd="50dp"
                android:text="@string/searchvolu"
                android:textColor="@color/white"
                android:textStyle="bold">

            </Button>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/uploadpic1"
                    android:text="@string/uploadphoto"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:textColor="@color/whitgray"
                    android:textSize="16sp">

                </TextView>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="-50dp"
                    android:src="@drawable/uploadfile">

                </ImageView>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:src="@drawable/indicator">

            </ImageView>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/searchConrainer1"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:visibility="gone"
            android:background="@drawable/dark_gray">

            <TextView
                android:id="@+id/searchtext1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/serachvolunterrtext"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:drawableLeft="@drawable/iconarrow">

            </TextView>

            <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
                android:id="@+id/progress_horizontal1"
                style="@style/PocketProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/searchtext"
                android:indeterminate="true"
                app:spb_progressiveStart_speed="1.5"
                app:spb_progressiveStop_speed="3.4"
                android:layout_marginBottom="16dp"
                app:spb_stroke_width="10dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:src="@drawable/indicator">

            </ImageView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@drawable/dark_gray"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:visibility="gone"
            android:id="@+id/searchConrainer2">

            <ImageView
                android:layout_width="match_parent"
                android:id="@id/progress_horizontal"
                android:background="@drawable/gradient"
                android:layout_marginStart="12dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="16dp"
                >

            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:id="@+id/distance"
                android:text="@string/distance"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:paddingRight="16dp"

                android:layout_marginLeft="16dp">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/profile"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/grrey"
                    android:layout_marginRight="16dp"

                    android:layout_marginLeft="16dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/personname"
                    android:text="احمد صلاح "
                    android:drawableLeft="@drawable/call"
                    android:drawablePadding="16dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content">

                </TextView>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="#707070" />


            <Button
                android:layout_width="match_parent"
                android:text="@string/cancle"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/cancle"
                android:padding="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/buttonbordergreen"
                android:layout_height="wrap_content">

            </Button>
            <View
                android:layout_width="150dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/grrey" />

        </LinearLayout>



    </FrameLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:src="@drawable/blackmic"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="350dp"
        app:layout_constraintStart_toStartOf="parent">

    </ImageView>
</androidx.constraintlayout.widget.ConstraintLayout>